--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.5"
 install:
-  - pip install requests
+  - pip3 install requests
 # command to run tests
 script:
   - python -m unittest Test_Get_Repository
